[gd_scene load_steps=24 format=2]

[ext_resource path="res://RequestMaker.gd" type="Script" id=1]
[ext_resource path="res://CodeEditor.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/buttons/focus.tres" type="StyleBox" id=3]
[ext_resource path="res://theme/buttons/normal.tres" type="StyleBox" id=4]
[ext_resource path="res://theme/buttons/pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://theme/lineEdit/normal.tres" type="StyleBox" id=6]
[ext_resource path="res://theme/TabContainer/tab_fg.tres" type="StyleBox" id=7]
[ext_resource path="res://theme/TabContainer/tab_bg.tres" type="StyleBox" id=8]
[ext_resource path="res://theme/RichTextLabel/normal.tres" type="StyleBox" id=9]
[ext_resource path="res://theme/TextEdit/normal.tres" type="StyleBox" id=10]
[ext_resource path="res://theme/checkbutton/normal.tres" type="StyleBox" id=11]
[ext_resource path="res://theme/ScrollBar/grabber.tres" type="StyleBox" id=12]
[ext_resource path="res://theme/ScrollBar/scroll.tres" type="StyleBox" id=13]
[ext_resource path="res://theme/ScrollBar/grabber_pressed.tres" type="StyleBox" id=14]
[ext_resource path="res://theme/ScrollBar/grabber_higlight.tres" type="StyleBox" id=15]

[sub_resource type="StyleBoxFlat" id=18]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.0612, 0.1857, 0.36, 1 )
corner_radius_top_left = 20
corner_radius_bottom_right = 20

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.2109, 0.277192, 0.37, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.121569, 0.364706, 0.709804, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0918, 0.27855, 0.54, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color( 0.101961, 0.313726, 0.611765, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="DynamicFontData" id=15]
font_path = "res://theme/fonts/arial.ttf"

[sub_resource type="DynamicFont" id=16]
size = 15
font_data = SubResource( 15 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 16 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = ExtResource( 4 )
Button/styles/hover = ExtResource( 3 )
Button/styles/normal = ExtResource( 4 )
Button/styles/pressed = ExtResource( 5 )
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = ExtResource( 12 )
HScrollBar/styles/grabber_highlight = ExtResource( 15 )
HScrollBar/styles/grabber_pressed = ExtResource( 14 )
HScrollBar/styles/scroll = ExtResource( 13 )
HScrollBar/styles/scroll_focus = ExtResource( 13 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = ExtResource( 6 )
LineEdit/styles/normal = ExtResource( 6 )
LineEdit/styles/read_only = null
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 18 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
RichTextLabel/colors/default_color = Color( 1, 1, 1, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = ExtResource( 9 )
RichTextLabel/styles/normal = ExtResource( 9 )
TabContainer/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 17 )
TabContainer/styles/tab_bg = ExtResource( 8 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = ExtResource( 7 )
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/bookmark_color = Color( 0.08, 0.49, 0.98, 1 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0.17, 0.16, 0.2, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87, 0.87, 0.87, 0.13 )
TextEdit/colors/completion_font_color = Color( 0.67, 0.67, 0.67, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 1 )
TextEdit/colors/completion_selected_color = Color( 0.26, 0.26, 0.27, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/executing_line_color = Color( 0.2, 0.8, 0.2, 0.4 )
TextEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/font_color_readonly = Color( 0.88, 0.88, 0.88, 0.5 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.64, 0.81, 1 )
TextEdit/colors/line_number_color = Color( 0.67, 0.67, 0.67, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.9, 0.31, 0.35, 1 )
TextEdit/colors/number_color = Color( 0.92, 0.58, 0.2, 1 )
TextEdit/colors/safe_line_number_color = Color( 0.67, 0.78, 0.67, 0.6 )
TextEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
TextEdit/colors/symbol_color = Color( 0.94, 0.94, 0.94, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = ExtResource( 10 )
TextEdit/styles/focus = ExtResource( 10 )
TextEdit/styles/normal = ExtResource( 10 )
TextEdit/styles/read_only = null
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = ExtResource( 12 )
VScrollBar/styles/grabber_highlight = ExtResource( 15 )
VScrollBar/styles/grabber_pressed = SubResource( 20 )
VScrollBar/styles/scroll = ExtResource( 13 )
VScrollBar/styles/scroll_focus = ExtResource( 13 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="Animation" id=1]
resource_name = "conn"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "Connecting", "Connecting...." ]
}

[node name="RequestMaker" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = 8.0
margin_right = -11.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/MarginContainer"]
margin_right = 996.0
margin_bottom = 577.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
margin_right = 996.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
custom_constants/separation = 10

[node name="Method" type="OptionButton" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "GET"
items = [ "GET", null, false, 0, null, "HEAD", null, false, 1, null, "POST", null, false, 2, null, "PUT", null, false, 3, null, "DELETE", null, false, 4, null ]
selected = 0

[node name="Label" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_top = 17.0
margin_right = 132.0
margin_bottom = 35.0
text = "URL"
align = 1
valign = 1

[node name="Url" type="LineEdit" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 602.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="SendButton" type="Button" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 612.0
margin_right = 687.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
text = "Connect"

[node name="OpenInBrowser" type="Button" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 697.0
margin_right = 825.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
text = "Open in browser"

[node name="Websocket" type="CheckButton" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 835.0
margin_right = 995.0
margin_bottom = 52.0
custom_styles/hover = ExtResource( 11 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_colors/font_color_disabled = Color( 0.360784, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_hover_pressed = Color( 0.360784, 0.00784314, 0.00784314, 1 )
custom_colors/font_color = Color( 0.360784, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_pressed = Color( 0.129412, 0.611765, 0.101961, 1 )
text = "Websocket"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 996.0
margin_bottom = 577.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer2" type="TabContainer" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 496.0
margin_bottom = 505.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JsonBody" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 58.0
margin_right = -10.0
margin_bottom = -20.0

[node name="SendToSockeyButton" type="Button" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/JsonBody"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -37.0
margin_top = -30.0
margin_right = 37.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource( 2 )]
visible = false
margin_left = 10.0
margin_top = 58.0
margin_right = -10.0
margin_bottom = -20.0

[node name="Authorization" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource( 2 )]
visible = false
margin_left = 10.0
margin_top = 58.0
margin_right = -10.0
margin_bottom = -20.0
wrap_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 500.0
margin_right = 996.0
margin_bottom = 505.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 496.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="RequestInfo" type="RichTextLabel" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 41.0
margin_right = 496.0
margin_bottom = 505.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
selection_enabled = true

[node name="DisplayBrowser" type="Button" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/RequestInfo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.5
margin_top = -46.0
margin_right = 70.5
margin_bottom = -8.0
text = "Display in browser"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConectingMessage" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/RequestInfo"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.5
margin_right = 35.5
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 1
custom_colors/font_color = Color( 0.176471, 0.490196, 1, 1 )
text = "Connecting."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/RequestInfo/ConectingMessage"]
autoplay = "conn"
anims/conn = SubResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="pressed" from="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer/OpenInBrowser" to="." method="_on_OpenInBrowser_pressed"]
[connection signal="pressed" from="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/JsonBody/SendToSockeyButton" to="." method="_on_SendToSockeyButton_pressed"]
[connection signal="pressed" from="UI/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/RequestInfo/DisplayBrowser" to="." method="_on_DisplayBrowser_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
